apps/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 9091
      targetPort: web-ui
