apps/media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-ca
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-com
  hostnames:
    - radarr.travisprosser.ca
    - radarr.travisprosser.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 9091
